--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 #relative_permalinks: true
 
 # Setup
-title:               "Developer Note"
+title:               "Git Note"
 tagline:             'Day by day, in Everyway, I am getting better and better'
 description:         'One a day'
 url:                 https://dmjgr5.github.io
