--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author:
 # Custom vars
 version:             1.0.0
 
-plugins: [jekyll-paginate]
+plugins: [jekyll-paginate, jekyll-sitemap]
 
 # Tag setting
 #collections:
