--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ author:
 # Custom vars
 version:             1.0.0
 
-plugins: [jekyll-paginate]
-
-# , jekyll-sitemap]
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
 
 # Tag setting
 #collections:
