--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,9 @@ plugins:
 #      layout: tag
 
 google_analytics:
-  ua: 'UA-109898110-1'
+  tracking_id: 'G-VEHRJDYDE5'
 
+  
 github:
   repo: 'https://github.com/dmjgr5/dmjgr5.github.io'
 
