--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ version:             1.0.0
 
 plugins:
   - jekyll-paginate
-  - jekyll-sitemap
+  # - jekyll-sitemap
 
 # Tag setting
 #collections:
